# corridor-toolkit-vias-verdes

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
cli/: __init__.py  main.py
docs/: README.md  architecture.md
docs/en/: api_reference.md  case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
docs/es/: api_reference.md  case_study.md  executive_summary.md  mathematical_formulas.md  pipeline_explained.md  technical_report.md
examples/: generate_demo_data.py
src/: __init__.py  annotate.py  chainage.py  config.py  crs.py  geology.py  geometry.py  io_kmz.py  outputs_dxf.py  outputs_maps.py  outputs_tables.py
tests/: __init__.py  test_core.py
